Added subscript to Glucose chemical.html

--- a/CSIS390LAB2.html
+++ b/CSIS390LAB2.html
@@ -54,7 +54,7 @@
       </ol>
       <p>
         One of the courses that might interest you is "Chemical Reactions in Art", where 
-        we will explore molecules like Glucose (C6H12O6) and their role in conservation 
+        we will explore molecules like Glucose (C<sub>6</sub>H<sub>12</sub>O<sub>6</sub>) and their role in conservation 
         techniques.
       </p>
       <p>
